jlamontSC-test/src/objects/Event_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledement_Response__c</fullName>
        <label>Acknowledement Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Status__c</fullName>
        <label>Acknowledgement Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Successfully_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledgement Successfully Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy_Action_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advocacy Action Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttendedCount__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Attended&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttendedCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in AddToListsCampaign class</description>
        <label>Campaign Member Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelledCount__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Cancelled&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CancelledCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Event</label>
        <referenceTo>Club_Event__c</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Field_1_Response__c</fullName>
        <label>Custom Field 1 Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_2_Response__c</fullName>
        <label>Custom Field 2 Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_3_Response__c</fullName>
        <label>Custom Field 3 Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Downloaded__c</fullName>
        <label>Date in Club</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <description>The Campaign&apos;s Event Category, for layout purposes.</description>
        <formula>TEXT(Campaign__r.Events_Category__c)</formula>
        <label>Event Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Club_Entity__c</fullName>
        <description>The Campaign&apos;s Event&apos;s Club Entity Name, for layout purposes.</description>
        <formula>Campaign__r.Club_Entity__r.Name</formula>
        <label>Event Club Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Campaign&apos;s Event Name field, for layout purposes.</description>
        <formula>Campaign__r.Event_Name__c</formula>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>The Campaign&apos;s Start Date, for layout purposes.</description>
        <formula>Campaign__r.Start_Date__c</formula>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <description>Campaign&apos;s Start Time field, for layout purposes.</description>
        <formula>Campaign__r.Start_Time__c</formula>
        <label>Event Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>Custom Campaign Status field, specific to events.</description>
        <formula>TEXT(Campaign__r.Status__c)</formula>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>The Campaign&apos;s Event Type, for layout purposes.</description>
        <formula>TEXT(Campaign__r.Events_Type__c)</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>TRIM(First_Name__c) + &apos; &apos; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Email__c</fullName>
        <label>Guardian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian_First_Name__c</fullName>
        <label>Guardian First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Last_Name__c</fullName>
        <label>Guardian Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Authorization_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Image Authorization Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Minor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Minor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Subscriber_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Subscriber Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoShowCount__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;No Show&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NoShowCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisteredCount__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Registered&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegisteredCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Event Registrations (Source Campaign)</relationshipLabel>
        <relationshipName>Event_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <description>URL that the constituent registered from. Blank if directly from Salesforce site.</description>
        <label>Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Website__c</fullName>
        <description>Formula field to parse Source URL into discrete categories</description>
        <formula>IF( CONTAINS( Source_URL__c , &quot;addup.org&quot;), &quot;AddUP&quot;, 
IF( (CONTAINS ( Source_URL__c, &quot;sc-qa.dev.bsd.net&quot;) || CONTAINS( Source_URL__c , &quot;sc.bsd.net&quot;)) , &quot;AddUp Dev&quot;, 
IF( ISBLANK( Source_URL__c) , &quot;Salesforce&quot;, null) 
))</formula>
        <label>Source Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Entry</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                    <default>true</default>
                    <label>Registered</label>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Acknowledgement_Sent__c</fullName>
        <label>Time Acknowledgement Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Waiver_Id__c</fullName>
        <label>Waiver Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiver_is_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver is Digital</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Registration</label>
    <nameField>
        <displayFormat>ER-{0000000}</displayFormat>
        <label>Event Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>